--- a/_data/2022/duke/teaching_assistants.yml
+++ b/_data/2022/duke/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Stephanie Jordan
+  image: steph_jordan.jpg
+  bio: "Stephanie Jordan is a PhD student in Sociology and Public Policy. She focuses on computational social science, and is involved with the Polarization Lab and the Sociology Department’s Computational Social Science group. At Duke, she also serves as a student government representative for the Sociology Department."
+  
