--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -50,8 +50,7 @@
   name: Group work
   events:
     - name: "10:00 - 16:00 Group work"
-    - name: "16:00 - 18:00 Research talk: Jonathan Gray"
-    - name: "18:00 - 19:00 CDCS Event"
+    - name: "16:00 - 18:00 Digital Social Science Mixer @ INSPACE"
 
 - date: 2022-06-21
   name: Group work
