--- a/_data/2022/ndsu/speakers.yml
+++ b/_data/2022/ndsu/speakers.yml
@@ -15,7 +15,7 @@
 
 - name: Tian Yang, Ph.D.
   image: /assets/images/penn2022_Tian.jpg
-  bio: "Tian Yang just received his Ph.D. from the Annenberg School for Communication at the University of Pennsylvania. He is interested in applying methods in computational social science to study political communication across the globe, especially in China and the US. Particularly, he looks at how today’s high-choice media environment influences the public’s information behaviors. His research employs various approaches, including network analysis, online experiments, natural experiments, etc."
+  bio: "Tian Yang just received his Ph.D. from the Annenberg School for Communication at the University of Pennsylvania and will join Chinese University of Hong Kong as an Assistant Professor in Communication this fall. He is interested in applying methods in computational social science to study political communication across the globe, especially in China and the US. Particularly, he looks at how today’s high-choice media environment influences the public’s information behaviors. His research employs various approaches, including network analysis, online experiments, natural experiments, etc."
   website: https://www.asc.upenn.edu/people/graduate-student/tian-yang
   
 - name: Dan Pemstein, Ph.D.
