--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -3,7 +3,7 @@
 - date: 2022-06-20
   name: SICSS-Atlanta Welcome
   events:
-  - name: "5:00pm - 7:00pm BBQ and Welcome"
+  - name: "6:00pm - 8:00pm Beer Garden Reception"
 
 - date: 2022-06-21
   name: Introduction and Ethics
