--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -281,7 +281,7 @@
 
           - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa [(video)](https://youtu.be/phQb-p_8t18)
           
-          - [Yahya Shaikh](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE (video)
+          - [Yahya Shaikh, M.D.](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE (video)
 
 
           
