Try to add poster

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -270,7 +270,7 @@
   events:
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: “Interrogating data collection methods focused on African and African Descendants: Challenges and Opportunities” (slide) (*Zoom*) (LIVE Q+A)
-      
+      image: /assets/images/Africa_poster.png
       
       
         **Speakers**
