Add poster link

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -269,8 +269,7 @@
   name: "Day 6: Work on group projects"
   events:
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: “Interrogating data collection methods focused on African and African Descendants: Challenges and Opportunities” (slide) (*Zoom*) (LIVE Q+A)
-      image: /assets/images/Africa_poster.png
+    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: “Interrogating data collection methods focused on African and African Descendants: Challenges and Opportunities” [(poster)](https://drive.google.com/file/d/1lGozCPxZIR-HLLTFDFluwYdobf4KoQhH/view) (slide) (*Zoom*) (LIVE Q+A)
       
       
         **Speakers**
