Add video links

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -242,7 +242,7 @@
     - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
     - name: "10:30 - 11:30 Participate in SICSS-H/M mass collaboration activity (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #4: Research Data Management Team (UC Berkeley) (handout) (slide) (*Zoom*) [(video)](https://youtu.be/MqMExgnNa4E) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #4: Research Data Management Team (UC Berkeley) (handout) (slide) (*Zoom*) [(video 1)](https://youtu.be/MqMExgnNa4E) [(video 2)](https://youtu.be/-DttXuSiQJA) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
         
         - [Erin D. Foster](https://researchdata.berkeley.edu/people/erin-foster), Service Lead, Campus-Wide Research Data Management Program, UC Berkeley
         
@@ -280,7 +280,7 @@
 
           - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa [(video)](https://youtu.be/phQb-p_8t18)
           
-          - [Yahya Shaikh, M.D.](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE (video)
+          - [Yahya Shaikh, M.D.](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE [(video)](https://youtu.be/vol058K8AvU)
 
 
           
@@ -300,7 +300,7 @@
     - name: "2:15 - 3:15 Round 7-12 (*Zoom*)"
     - name: "3:15 - 3:30 Break"
     - name: "3:30 - 4:00 Group debrief (join research teams) (*Zoom*)"
-    - name: '4:00 - 5:30 [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Assistant Professor, Information Sciences, Cornell University, "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/mP3kCCV6WmM) - LIVE session to include Q&A and office hour (slide) (*Zoom*) (LIVE Q+A)'
+    - name: '4:00 - 5:30 [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Assistant Professor, Information Sciences, Cornell University, "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/ZXstvgxY0Hs) - LIVE session to include Q&A and office hour (slide) (*Zoom*) (LIVE Q+A)'
     
   
 - date: 2022-06-28
@@ -315,13 +315,13 @@
      
         **Speakers**
       
-          - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor of Media Studies at Georgia Tech [(book)](https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375) (video)
+          - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor of Media Studies at Georgia Tech [(book)](https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375) [(video)](https://youtu.be/k-MidbsQoEQ)
 
-          - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor of Social Work at Columbia University (slide) (video)
+          - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor of Social Work at Columbia University (slide) [(video)](https://youtu.be/bM-NWBkZMVA)
 
-          - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Assistant Professor of Computer and Information Science and Engineering at University of Florida (slide) (video)
+          - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Assistant Professor of Computer and Information Science and Engineering at University of Florida (slide) [(video)](https://youtu.be/Z8nhr1CAgvA)
           
-          - [Danielle Olson, Ph.D.](http://hellodanio.com/about.html), AI/ML Human Factors Researcher at Apple [(video)](https://youtu.be/ASBM3i9-mvg)
+          - [Danielle Olson, Ph.D.](http://hellodanio.com/about.html), AI/ML Human Factors Researcher at Apple [(video)](https://youtu.be/HzuoBq3RcW0)
 
 
           
