--- a/_data/2022/london/participants.yml
+++ b/_data/2022/london/participants.yml
@@ -52,6 +52,11 @@
   image: https://sicss.io/assets/images/1_zAIsl9tu0YAbA5ZDqV1Sfx-pMoRh-IZ.jpeg
   bio: Manfredi is a PhD student at the Culture, Media and Creative Industries department at King's College of London funded by the London Arts and Humanities Partnership. I am interested in the implications of complexity theory on cultural policies and creative economy research.
   website: https://twitter.com/ManfredideBern1
+  
+- name: Kara Luo
+  image: https://sicss.io/assets/images/16B9USMFykiQ8L_lqXzQsccOjX5e4inzd.jpeg
+  bio: Kara Luo is a research fellow at the Harvard Kennedy School, and will begin her PhD program this fall in the Stanford GSB Organizational Behavior department. Her research interests include using computational methods to better understand culture and information networks using experimental and computational methods. She holds a B.S. and M.Eng. from MIT.
+  website: 
 
 - name: Juliane Schittek 
   image: https://sicss.io/assets/images/1SknswgZrCH2Xoh8tnsG8Yz8gHZ5_AwYh.jpeg
