--- a/_data/2022/aachen-graz/participants.yml
+++ b/_data/2022/aachen-graz/participants.yml
@@ -1,1 +1,228 @@
-- name:
+- name: Bolaji Akorede
+  bio: Bolaji Akorede is a master's degree student at the school of collective intelligence
+    at Mohammed VI Polytechnic University, Morocco. He has a bachelor of technology
+    in human physiology. He has conducted studies on aging, ulcer healing, and memory.
+    He is a tech lover and has expertise in data science using python, R, SAS, etc.
+    He is currently conducting research using the wisdom of crowds. He is making use
+    of how we can use the wisdom of crowds and different cognitive tools present in
+    humans to solve human problems. He has an interest in behavioral and social science
+    and is interested in how drug abuse affects decision-making and other cognitive
+    abilities. He is open to Ph.D. opportunities and is ready to relocate. You can
+    contact him for further discussion.
+  website: https://twitter.com/Bolajitopaz
+- name: "G\xFCl\u015Fah Ak\xE7ak\u0131r"
+  bio: "G\xFCl\u015Fah Ak\xE7ak\u0131r is a first-year PhD student at the University\
+    \ of California, Los Angeles. Her research examines the dynamics of complex social\
+    \ systems using social networks and agent-based models. She holds an MS in industrial\
+    \ engineering from Bo\u011Fazi\xE7i University, and a BS in industrial engineering\
+    \ from Istanbul Technical University."
+  website: https://twitter.com/gulsahakcakir
+- name: "Teodora Alori\u0107 "
+  bio: "Teodora Alori\u0107 is a student at the Sociology Master programme at the\
+    \ University of Belgrade. Topic of her Master's paper concerns how different professional\
+    \ groups see the distribution of fairness in their country. Other topics that\
+    \ interest her include data feminism and use of data as a tool for society."
+  website: .nan
+- name: Yasaman Asgari
+  bio: "Yasaman is an undergraduate student studying computer science. She will attend\
+    \ \xC9cole Normale Superieure Lyon for her master's degree. Previously, she has\
+    \ studied temporal aspects of human behavior on social media and social networks\
+    \ using tools from network science, agent-based modeling, and machine learning."
+  website: https://twitter.com/yasamanasgary
+- name: Emil Bakkensen Johansen
+  bio: "Emil Bakkensen Johansen is a PhD student at Digital Democracy Centre, University\
+    \ of Southern Denmark. He holds a master\u2019s degree in Sociology from the University\
+    \ of Copenhagen.  His academic interests are computational social science, information/knowledge\
+    \ networks, organizational ecosystems, social movements and digital communication\
+    \ technologies."
+  website: https://twitter.com/EmilBakke
+- name: Christopher (ZHENZHI) CHU (ZHU)
+  bio: Christopher Chu (Zhenzhi Zhu) received his Bachelor's degree in Economics at
+    Sun Yat-sen University, China. Christopher is passionate about machine learning
+    and green finance. He is the Gold Medalist of the National Geography Olympiad
+    and published research on green finance and machine learning in high-level forums.
+    Christopher aspires to deeply engage in machine learning and forge new paths for
+    global green finance collaboration paths. Christopher is from China.
+  website: /
+- name: Andrea Cass
+  bio: Andrea is a Masters student in Sociology & Social Research. Her research interests
+    center around immigrants. She is currently studying exclusionary attitudes towards
+    immigrants across Europe and is hoping to use computational methods for her thesis.
+  website: .nan
+- name: Theodore Charm
+  bio: Theodore is a PhD candidate in Government at the University of Texas at Austin.
+    His research uses regression, online experiments, and formal models to study social
+    movements in East Asia. His work focuses on factors that motivate individuals
+    to protest. He holds a MMath in Mathematics from the University of Oxford.
+  website: .nan
+- name: Muhsin Ciftci
+  bio: 'Muhsin Ciftci is a PhD Student at Goethe University Frankfurt School of Economics,
+    Finance and Management.  His research interests include international finance,
+    macroeconomics, transmission of the risks and further the application of machine
+    learning to the field. '
+  website: .nan
+- name: "\xCDris Dami\xE3o"
+  bio: "\xCDris Dami\xE3o is a research assistant in computational social science,\
+    \ working in the Social Physics and Complexity Lab (SPAC) at LIP. With a background\
+    \ in Biomedical Engineering and Neurosciences, she shifted her research focus\
+    \ and is currently addressing online disinformation's spreading and ways to tackle\
+    \ it, particularly outside of social media, where this problem tends to be overlooked.\
+    \ Her main interests are online privacy and tracking, the personalization of our\
+    \ online world, and its effects on individuals and society. She uses computational\
+    \ and ethical methods to understand how the information collected about us (by\
+    \ who and how extensively) can emphasize polarization and the spreading of disinformation."
+  website: .nan
+- name: Xinkai Du
+  bio: 'Xinkai Du is a doctoral candidate at the Statistical Modeling in Psychology.
+    He is interested in the network modeling of attitudes and morality. Recently,
+    he grew a strong interests in methods development and is currently developing
+    new network psychometrics techniques. '
+  website: https://twitter.com/XinkaiDu
+- name: Martin Faschingbauer
+  bio: 'In 2007 I graduated in Psychology (Master''s degree) from Karl Franzens University
+    in Graz. Since then I have been working in different work-fields like rehabilitation
+    of people with mental impairments and school-psychology. Since March 2022 I am
+    on a one-year educational leave, during which I am studying Computational Social
+    Systems at TU Graz.
+
+    '
+  website: .nan
+- name: Annette Goldhausen
+  bio: 'Annette Goldhausen is pursuing a Master''s in Computational Social Systems
+    at RWTH Aachen. She best fits the ''broadly conceived'' category for both social
+    scientists and data scientists with her longish career in international Human
+    Resources and a background in Business Administration (International MBA Instituto
+    de Empresa in Madrid 2006). A curious and interested party looking for additional
+    ways to integrate learnings and research from CSS into practice. '
+  website: .nan
+- name: Tri Hoang
+  bio: Tri Hoang is a master student at Department of Economics, University of Bonn.
+    His research interests include Computational Economics, Information Economics,
+    Game Theory, and Optimal Control.
+  website: https://twitter.com/mtrihoang
+- name: "El\xE7in Istif Inci"
+  bio: "El\xE7in Istif Inci obtained her PhD degree in Political Science and International\
+    \ Relations at Istanbul University as the Council of Higher Education Migration\
+    \ Studies and the Scientific and Technological Research Council of Turkey scholar.\
+    \ She was a 2020 junior visiting fellow at Maastricht University\u2019s Centre\
+    \ for Citizenship, Migration and Development. El\xE7in also holds an Advanced\
+    \ MSc. in Digital Humanities from KU Leuven. Her research areas are international\
+    \ migration, citizenship, naturalization and sports, and computational techniques\
+    \ in social science research. "
+  website: .nan
+- name: Shufan JIANG
+  bio: Shufan Jiang is a doctoral student in Natural Language Processing and Knowledge
+    Management at the University of Reims Champagne-Ardenne and at ISEP Paris. Her
+    research interests include crowdsensing, social media, text mining for farmer-centric
+    smart agriculture applications. Methodologically, she is very interested in using
+    pretrained language models as explicit knowledge base for domain-specific textual
+    data integration. Prior to beginning her PhD, Shufan worked as a chatbot developer
+    at BNP Paribas Securities Services.
+  website: .nan
+- name: Evgeniya Korotchenko
+  bio: "Evgeniya Korotchenko is an independent professional with an academic background\
+    \ (a research psychologist, Ph.D.) working with market data, doing socio-cultural\
+    \ research and segmentation, and corporate ethnography for strategic decision\
+    \ making. \nDuring the Pandemic was released a collective whitepaper in which\
+    \ was discussed the research on self-confidence as a concept among females in\
+    \ different cultures. \nEvgeniya is passionate about data visualization and is\
+    \ attracted to getting a sense of the city through social data. Besides professional\
+    \ work, her lifelong interest is in the field of perception of art"
+  website: .nan
+- name: Haokun Liu
+  bio: "Haokun is an MSc student in Geography at Uni Bern, Switzerland. His BSc is\
+    \ in Geographic Information Science and Finance from Southwest University, China.\
+    \ Haokun\u2019s research concerns the interdisciplinary studies that apply methods\
+    \ about GIScience, Complex networks, and statistics to solve questions related\
+    \ to social data, sustainable development, and environmental issues."
+  website: .nan
+- name: Caio Mello
+  bio: "Caio is a Ph.D. student in Digital Humanities at the School of Advanced Study,\
+    \ University of London, working for the EU-funded Horizon 2020 project CLEOPATRA,\
+    \ under the Marie Sk\u0142odowska-Curie Innovative Training Network. He holds\
+    \ a BA in Journalism and a MA in Communication, both from the Universidade Federal\
+    \ de Pernambuco, Brazil. His main research interests lie in the fields of digital\
+    \ methods, Natural Language Processing techniques (NLP), data visualisation, media\
+    \ studies, urban studies and digital activism. His project 'Nationalism, internationalism\
+    \ and sporting identity: the London and Rio Olympics' explores the media coverage\
+    \ of the Olympic legacies in a cross-cultural, cross-lingual and temporal perspective."
+  website: https://twitter.com/caiocmello
+- name: Muhammad Zahidul Islam Miaji
+  bio: 'Miaji is an MPP student specialising in Global Governance & Political Economy
+    from the Korea Development Institute (KDI) School of Public Policy & Management,
+    South Korea. He completed his Bachelor of Social Science (BSS) in Sociology. He
+    has two years of experience as a research assistant with several mixed methods
+    research projects. He is a data enthusiast and interested in using social media
+    data to discover various political movements and governance challenges. His interest
+    areas are political sociology, quantitative methods, environmental politics, civic
+    engagement, and CSS.   '
+  website: https://twitter.com/Miaji_Zahidul
+- name: Michal Monselise
+  bio: 'Michal Monselise is a PhD candidate at Drexel University studying data science
+    and specializing in healthcare informatics. Her research spans multiple areas
+    in healthcare including mental health and social media, pregnancy loss, vehicle
+    safety, and prostate cancer. Primarily, she is interested in studying relationships
+    and how networks influence behavior. Before going back to school for a PhD, she
+    worked as a data scientist mainly in marketing. '
+  website: https://twitter.com/michalmonselise
+- name: Nikita Olefir
+  bio: Nikita Olefir is a Political Science student in Higher School of Economics
+    in Saint Petersburg. He holds a double degree of the Tor Vergata University in
+    Rome. His research interests concern social movements and electoral behavior in
+    the European Union.
+  website: .nan
+- name: Katharina  Roetzer
+  bio: "Katharina is a member of the research group OCKO (\u201COrganizing Cognition\
+    \ in Knowing Organizations\u201D, University of Vienna). Academic background in\
+    \ sociology and cognitive science, further education in data science. Research\
+    \ interests: socially situated cognition in (adult) learning, educational technologies,\
+    \ integrating approaches from design, sociology, cognitive science, and data science. "
+  website: .nan
+- name: Sudhang Shankar
+  bio: "I'm a Senior Software Engineer at ION Trading and concurrently pursuing an\
+    \ MSc. in Computational Social Systems at the Technische Universit\xE4t Graz."
+  website: .nan
+- name: Abdoul kafid TOKO KOUTOGUI
+  bio: Abdoul kafid TOKO KOUTOGUI, is a student in the Master of Collective Intelligence
+    at the Mohammed VI Polytechnic University.  His research is in the field of digital
+    transformation, cognitive sciences, and the use of computational social sciences
+    for a better understanding of our society complex problems.
+  website: https://twitter.com/KafidToko
+- name: Alexandros Vlazakis
+  bio: Alexandros Vlazakis is a PhD Candidate in Social Psychology Aristotle University
+    of Thessaloniki. His research interests focus on the fields of political and social
+    psychology, mainly in minority influence, social change processes, social movements,
+    media framing, political engagement and participation in civic society.
+  website: .nan
+- name: Zehui Yu
+  bio: "Zehui Yu is a PhD candidate in Computational Social Science at GESIS - Leibniz\
+    \ Institut f\xFCr Sozialwissenschaften. Before that, she followed the Research\
+    \ Master's program in Communication Science at the University of Amsterdam and\
+    \ has a multidisciplinary background in Journalism and Human Resource Management.\
+    \ Current research focuses on online hate detection and computational methods\
+    \ in social science research."
+  website: https://twitter.com/Zehui_Y
+- name: MANAL ZARIK
+  bio: "Manal Zarik is a final year Master of science student in Collective intelligence\
+    \ at the Mohammed VI Polytechnic University. \nShe is engaged in several research\
+    \ projects that tackle human behavior and computational sciences. She has a passion\
+    \ for deploying solutions to various complex problems that exist within groups\
+    \ of workers in organizations to achieve the ultimate goal of enhancing the future\
+    \ of humankind. \nHer research interests include digital transformation, social\
+    \ networks, and computational social sciences and methods in collective intelligence\
+    \ for the resolution of complex problems within organizational transformations\
+    \ and digitalization context."
+  website: .nan
+- name: Qingcheng Zeng
+  bio: Qingcheng Zeng will start his PhD journey at the Department of Linguistics,
+    Northwestern University in 2022 fall. His main research interests are NLP and
+    social computing, especially on online hateful contents and discourse processing.
+    Previously he got his BA from University of Manchester and Zhejiang University.
+  website: https://twitter.com/SteveZeng7
+- name: Federico Zimmerman
+  bio: Federico Zimmerman is a PhD candidate at Universidad Torcuato Di Tella, Argentina.
+    His current research focuses on the psychological underpinnings of affective polarization
+    and political segregation. By performing behavioral experiments and computational
+    models he is trying to understand the role of political extremes in the increasingly
+    polarization.
+  website: https://twitter.com/FedeZimmerman
