--- a/_data/2022/london/participants.yml
+++ b/_data/2022/london/participants.yml
@@ -53,6 +53,12 @@
   bio: Manfredi is a PhD student at the Culture, Media and Creative Industries department at King's College of London funded by the London Arts and Humanities Partnership. I am interested in the implications of complexity theory on cultural policies and creative economy research.
   website: https://twitter.com/ManfredideBern1
   
+- name: Maina Korir
+  image: https://sicss.io/assets/images/1oVRzvKPEKPzNhfgxh8NFnxzEjhQ9rz9x.jpeg
+  bio: Dr Maina Korir is a lecturer in Information Technology at the University of Bedfordshire. She recently completed her PhD in Educational Technology at the Open University, UK. Her broad research interests are in human-technology interaction and recent research has focused on privacy in learning analytics and decentralized identity.
+  website: https://www.beds.ac.uk/howtoapply/departments/computing/staff/maina-korir/
+
+  
 - name: Kara Luo
   image: https://sicss.io/assets/images/16B9USMFykiQ8L_lqXzQsccOjX5e4inzd.jpeg
   bio: Kara Luo is a research fellow at the Harvard Kennedy School, and will begin her PhD program this fall in the Stanford GSB Organizational Behavior department. Her research interests include using computational methods to better understand culture and information networks using experimental and computational methods. She holds a B.S. and M.Eng. from MIT.
