--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -276,7 +276,7 @@
       
           - [Bhaso Ndzendze, Ph.D.](https://bhasondzendze.co.za), Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg [(video)](https://youtu.be/MAV5azDk2Vs)
           
-          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria [(video](https://youtu.be/_Jny4h9RN4M)
+          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria [(video)](https://youtu.be/_Jny4h9RN4M)
 
           - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa [(video)](https://youtu.be/phQb-p_8t18)
           
