--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -29,7 +29,11 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors [Dr. Randal Pinkett](https://www.randalpinkett.com/) and [Dr. Jeffrey Robinson](https://www.business.rutgers.edu/faculty/jeffrey-robinson) [(slide)](https://docs.google.com/presentation/d/1DQdFX0osncnS4Rq_U5vHWxFm0qwDYxtv_xWcHc8QFLA/edit?usp=sharing) (*Zoom*) [(video)](https://youtu.be/B5V2s8xoi08) (LIVE Q+A)"
     - name: "2:15 - 2:30 Break"
-    - name: "2:30 - 5:30 R Workshop (*Zoom*) (video)"
+    - name: "2:30 - 5:30 R Workshop (*Zoom*) (video)
+        
+        - [Evan Muzzall, Ph.D.](https://library.stanford.edu/people/muzzall), Head of Software and Services for Data Science, Stanford University
+        
+        - [Jose Martin Aveldanes](https://sociology.berkeley.edu/graduate-student/jose-martin-aveldanes), Ph.D. student, Sociology, UC Berkeley"
 
 
 - date: 2022-06-19
@@ -128,7 +132,11 @@
           - Building the Public Interest Technology by Jenny Toomey & Latanya Sweeney, [Stanford Social Innovation Review](https://ssir.org/articles/entry/building_the_public_interest_technology_infrastructure_of_the_future#)"
 
           
-    - name: "2:00 - 5:00 R Workshop (*Zoom*) (video)"
+    - name: "2:00 - 5:00 R Workshop (*Zoom*) (video)
+        
+        - [Evan Muzzall, Ph.D.](https://library.stanford.edu/people/muzzall), Head of Software and Services for Data Science, Stanford University
+        
+        - [Jose Martin Aveldanes](https://sociology.berkeley.edu/graduate-student/jose-martin-aveldanes), Ph.D. student, Sociology, UC Berkeley"
 
   
 - date: 2022-06-20
