--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -349,7 +349,7 @@
     - name: "10:00 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division UC Berkeley) (*Zoom*) [(video)](https://youtu.be/tJCiuUxKe1Y) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)
     
-        - [Lisa Garcia-Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost for Graduate Studies, Dean of the Graduate Division, & Professor Graduate School of Education"  
+        - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost for Graduate Studies, Dean of the Graduate Division, & Professor Graduate School of Education"  
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
     - name: '4:00 - 5:30 [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida, "Using Uncommon data to understand society and its people" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE session to include Q&A and office hour [(slide)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q+A)'
