--- a/_data/2022/london/participants.yml
+++ b/_data/2022/london/participants.yml
@@ -33,6 +33,11 @@
   bio: Prashant Garg is a PhD student at the Department of Economics and Public Policy at Imperial College London. His area of interest include belief formation and information diffusion. He loves using diverse tools such as network analysis and textual data, and marrying them with econometrics to understand causal relationships. Prior to graduate school, he worked as a "predoc" at Imperial College, working on projects related to environmental economics, behavioural economics, mobility and productivity. He received his BSc. and MSc. in Economics from Cardiff University and UCL.
   website: https://twitter.com/Prashant_Garg_
 
+- name: Mia Jovanova
+  image: https://sicss.io/assets/images/1zTaju3sl_7-HXuyMM20wUwWe2UZ-Tdx3.jpeg
+  bio: Mia Jovanova is a doctoral candidate at the University of Pennsylvania. She studies behavior change using brain, social network and mobile phone data. Her current work examines how neural and social processes interact, via machine learning tools, to improve the predictive and explanatory power of health behavior change theories. She further deploys experiments to test mobile health interventions. Mia holds a BSc from Cornell University.
+  website: https://twitter.com/jovanova_mia
+
 - name: Matteo Burato 
   image: https://sicss.io/assets/images/1-p3iaX8OxT_kkRUEg2e57D7nfhyoRnx5.jpeg
   bio: Matteo is a PhD student in Strategy at ICBS. His work is mainly concerned with the strategic decisions and behavioural patterns of modern enterprises in multiple-goals/multiple-optima scenarios. His main focus is sustainability strategies, their evolution, and their effects on performance. The analysis of sustainability report is a key tool in this effort.
@@ -58,7 +63,6 @@
   bio: Dr Maina Korir is a lecturer in Information Technology at the University of Bedfordshire. She recently completed her PhD in Educational Technology at the Open University, UK. Her broad research interests are in human-technology interaction and recent research has focused on privacy in learning analytics and decentralized identity.
   website: https://www.beds.ac.uk/howtoapply/departments/computing/staff/maina-korir/
 
-  
 - name: Kara Luo
   image: https://sicss.io/assets/images/16B9USMFykiQ8L_lqXzQsccOjX5e4inzd.jpeg
   bio: Kara Luo is a research fellow at the Harvard Kennedy School, and will begin her PhD program this fall in the Stanford GSB Organizational Behavior department. Her research interests include using computational methods to better understand culture and information networks using experimental and computational methods. She holds a B.S. and M.Eng. from MIT.
@@ -78,6 +82,11 @@
   image: https://sicss.io/assets/images/1cD1W-5NtnDj5Dv5joNu--4bTadp4mm9p.jpeg
   bio: Ee Hwee is a PhD student in Organisational Behaviour at London Business School. Her research focuses on mindsets, prestige, and decision-making during employee recruitment. In particular, one project she is currently working on examines how mindsets about ability shape organizations’ use of institutional prestige as an exclusion factor to gatekeep certain individuals over others, despite all individuals being equally qualified.
   website: https://twitter.com/eehweeee
+
+- name: Christine Nguyen
+  image: https://academics.gsb.columbia.edu/sites/academics/files-efs/styles/default_content_image_widescreen2x/public/person/photos/Christine%20Nguyen%20-%20ChristineNguyen-medium.jpg
+  bio: Christine is a doctoral student at Columbia Business School in the Management department. She is broadly interested in group status, societal status, and communication styles. Prior to beginning her PhD, she studied cognitive science at UC Berkeley, with minors in data science and applied linguistics.
+  website: https://twitter.com/christine_qn
 
 - name: Canfer Akbulut 
   image: https://sicss.io/assets/images/1cjidmTMz3_O1QYxWbgJJ67r0CN9-wqIX.jpeg
