--- a/_data/2022/lisbon/participants.yml
+++ b/_data/2022/lisbon/participants.yml
@@ -7,6 +7,8 @@
   image: /assets/images/AnqingHu.jpg
 - name: Elena Pupaza
   bio: "Elena Pupaza is a social scientist and post-doctoral researcher at Stockholm University Demography Unit (SUDA). She studies behavioural science in a causal inference framework, using quantitative methods and quasi-experimental designs. Her primary research interests are immigrant integration and understanding how migrants shape their local communities. Elena completed her doctoral studies in political science at the London School of Economics in 2021 and went on to research adaptation trajectories of descendants of refugees at Stockholm University, as a post-doctoral researcher in the ERC funded project A Better Life for the Children of Exile: Intergenerational Adaptation of the Descendants of Refugees."
+  image: /assets/images/ElenaPupaza.jpg
+  website: https://ecpupaza.github.io/
 - name: Filippo Andrei
   bio: "Filippo Andrei is a doctoral student in sociology and social research at the University of Trento. In April 2018, after graduating in communication studies (with laudem) at the University of Turin, he worked as an assistant researcher at the unit of organization studies of the department of politics, culture and society of Turin. His work focuses on the social mechanisms that generate cooperation and trust in illegal trade on the darknet. Furthermore, he is interested how social structure shapes technology in organizations and, in turn, how technology influences decision making. He has presented his work at the International Conference on Social Dilemmas and at the R&D Management Conference."
   image: /assets/images/FilippoAndrei.jpg
