--- a/_data/2022/delhi/speakers.yml
+++ b/_data/2022/delhi/speakers.yml
@@ -46,7 +46,7 @@
   
   
 - name: Sneha Shashidhara
-  bio: Sneha Shashidhara is a senior research consultant at the Centre for Social and Behaviour Change, with a teaching position at the Psychology Department of Ashoka University. She is a cognitive neuroscientist by training working as a researcher studying mechanisms of the brain underlying higher-order cognition and decision making, with an interest in the interaction between cognition and social psychology. A Gates-Cambridge scholar, she did her PhD, studying the multiple demand network in the brain, at the University of Cambridge. This network is active in different demands, be it language, memory, math etc and handles many types of task difficulty. Prior to that, she did her Masters in Neuroscience at International Max Planck Research School (IMPRS), Goettingen, Germany.
+  bio: Sneha Shashidhara is a senior research fellow at the Centre for Social and Behaviour Change, with a teaching position at the Psychology Department of Ashoka University. She is a cognitive neuroscientist by training working as a researcher studying mechanisms of the brain underlying higher-order cognition and decision making, with an interest in the interaction between cognition and social psychology. A Gates-Cambridge scholar, she did her PhD, studying the multiple demand network in the brain, at the University of Cambridge. This network is active in different demands, be it language, memory, math etc and handles many types of task difficulty. Prior to that, she did her Masters in Neuroscience at International Max Planck Research School (IMPRS), Goettingen, Germany.
   image: /assets/images/sneha.jpg
   website: https://csbc.org.in/team.php   
   
