added day 1 talk recording

--- a/_data/2022/singapore/schedule.yml
+++ b/_data/2022/singapore/schedule.yml
@@ -2,7 +2,7 @@
   name: Introduction and ethics
   events:
     - name: "8:00 - 8:25 Introduction and logistics"
-    - name: "8:30 - 9:55 Opening Keynote (virtual) by Dr. Sandra Gonzalez-Bailon (UPenn): Key Questions in Computational Social Science."
+    - name: "8:30 - 9:55 Opening Keynote (virtual) by Dr. Sandra Gonzalez-Bailon (UPenn): Key Questions in Computational Social Science." [(video)](https://nus-sg.zoom.us/rec/share/0xipL05rU6dF9cGH9Qo4J1wG7GjBoiAf-x8AhfiZ6ZruelV5x5Tmi00QPgXAM5iL.LRg8rApUeQ8dCcdU)
     - name: "10:00 - 11:55 Morning session"
     - name: "12:00 - 13:00 Lunch"
     - name: "13:00 - 17:00 Afternoon session and group activities"
