--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -1,4 +1,4 @@
-- date: Monday, June 20 2022
+- date: Monday, 20 June 2022
   events:
     - name: 10:00 - 11:00 [An Introduction to Computational Social Science"](https://youtu.be/zGG9wPl1C5E)
     - name: 11:00 - 12:00 [Why SICSS](https://youtu.be/K6HzpZMcaQw)
@@ -11,14 +11,14 @@
     - name: 15:00 - 15:15 Assigning to groups
     - name: 15:15 - 15:30 Debrief and Reflections
 
-- date: Tuesday, June 21 2022
+- date: Tuesday, 21 June 2022
   events:
     - name: "10:00 - 12:00 Speaker 1: [Bhaso Ndzendze](https://bhasondzendze.co.za/) (University of Johannesburg)"
     - name: "12:00 - 13:00 Break or catch up on R resources"
     - name: "13:00 - 15:00 Group meetings: work on book report (optional)"
     - name: "16:00 - 17:00 Speaker 2: Geci Karuri-Sebina (Wits University)"
 
-- date: Wednesday, June 22 2022
+- date: Wednesday, 22 June 2022
   events:
     - name: "10:00 - 11:00 Digital Innovations and amplifying underrepresented voices in civic
       tech [(video) (courtesy of CTIN and ICSCentre)](https://youtu.be/3d8AoGHEwws)"
@@ -26,13 +26,13 @@
       Society)"
     - name: "16:00 - 17:00 Speaker 2: [Chenai Chair](https://www.chenai.africa)  (Moz://a Foundation)"
 
-- date: Thursday, June 23 2022
+- date: Thursday, 23 June 2022
   events:
     - name: "14:00 - 15:00 Speaker 1: [Adriana Marais](https://www.adrianamarais.org/about/) (Proudly Human)"
     - name: "15:00 - 16:00 Group meetings (optional)"
     - name: "16:00 - 17:00 Speaker 2: Tendani Chimboza (University of Cape Town)"
 
-- date: Friday, June 24 2022
+- date: Friday, 24 June 2022
   events:
     - name: "13:00 - 15:00 Group meetings: finalise book report (optional)"
     - name: 15:00 - 16:00 Break or catch up on R resources
@@ -43,7 +43,7 @@
     - name: Day off
     - name: "**submit group book report (optional)**"
 
-- date: Monday, June 27 2022
+- date: Monday, 27 June 2022
   name: Introduction and Ethics
   events:
     - name: Watch [Day 1 Video](https://sicss.io/curriculum) in your own time
@@ -55,28 +55,28 @@
       Data Collection Methods Focused on African and African Descendents Around the World:
       Problems, Realities and Future Opportunities"
 
-- date: Tuesday, June 28 2022
+- date: Tuesday, 28 June 2022
   name: Collecting Digital Trace Data
   events:
     - name: Watch [Day 2 Video](https://sicss.io/curriculum) in your own time
     - name: 13:00 - 14:00 Discussion with Zimasa
     - name: "14:00 - 16:00 Lecture: Timothy Khan Aikins (University of Cape Town)"
 
-- date: Wednesday, June 29 2022
+- date: Wednesday, 29 June 2022
   name: Automated Text Analysis
   events:
     - name: Watch [Day 3 Video](https://sicss.io/curriculum) in your own time
     - name: "13:00 - 14:30 Lecture: Franklin Tchakounté (University of Ngaoundere)"
     - name: 15:00 - 16:00 Discussion with Zimasa
 
-- date: Thursday, June 30 2022
+- date: Thursday, 30 June 2022
   name: Surveys in the Digital Age
   events: 
     - name: Watch [Day 4 Video](https://sicss.io/curriculum) in your own time
     - name: 13:00 - 14:00 Discussion with Zimasa
     - name: "15:00 - 16:00 Lecture: Xolani Makhubele"
 
-- date: Friday, July 1 2022
+- date: Friday, 1 July 2022
   name: Mass collaboration and machine learning
   events:
     - name: Watch [Day 5 Video](https://sicss.io/curriculum) in your own time
@@ -86,7 +86,7 @@
 - date: Saturday - Sunday
   name: Break
 
-- date: Monday, July 4 2022 
+- date: Monday, 4 July 2022 
   name: In-person group projects
   events:
     - name: Paticipants arrive at accomodation
@@ -94,7 +94,7 @@
     - name: 15:00 - 17:00 Welcome, Logistics and Group allocations
     - name: 18:00 - 19:00 Dinner
 
-- date: Tuesday, July 5 2022
+- date: Tuesday, 5 July 2022
   events:
     - name: 09:00 - 12:30 Group Project Discussion
     - name: 13:00 - 13:30 Lunch
@@ -103,7 +103,7 @@
     - name: 16:00 - 17:30 Group Projects
     - name: 18:00 - 19:00 Dinner
 
-- date: Wednesday, July 6 2022
+- date: Wednesday, 6 July 2022
   events:
     - name: 09:00 - 10:00 Group Project
     - name: "10:00 - 12:00 Lecture: [Tapiwa
@@ -112,7 +112,7 @@
     - name: 14:00 - 17:30 Group Project
     - name: 18:00 - 19:00 Dinner
 
-- date: Thursday, July 7 2022
+- date: Thursday, 7 July 2022
   events:
     - name: 09:00 - 10:00 Group Project
     - name: "10:00 - 12:00 Lecture: Odilile Ayodele (University of Johannesburg)"
@@ -120,7 +120,7 @@
     - name: 14:00 - 17:30 Group Project
     - name: 18:00 - 19:00 Dinner
 
-- date: Friday, July 8 2022
+- date: Friday, 8 July 2022
   events:
     - name: "09:00 - 10:00 Lecture: Courtesy of Howard/Mathematica"
     - name: 11:00 - 12:00 Discussion Session
@@ -128,6 +128,6 @@
     - name: 14:00 - 17:30 Final Presentations
     - name: 18:00 - 19:00 Dinner
 
-- date: Saturday, July 9 2022
+- date: Saturday, 9 July 2022
   events:
     - name: Participants check out
