--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -19,7 +19,7 @@
   website: https://nyuad.nyu.edu/en/academics/divisions/social-science/faculty/stephane-helleringer.html
 
 - name: Biandri Joubert
-  image: /assets/images/BJoubert.png
+  image: /assets/images/BJoubert.PNG
   bio: "<p align='justify'>Biandri is a researcher in the field of international trade law and has recently submitted her PhD thesis for marking. She will defend her thesis later in the year. She started her research with a purely legal (doctrinal) research background before transitioning to a mixed methodology PhD research project which included a content analysis using R programming. The difficulty in finding resources that were relatable to a legal academic background prompted the design of her Open Life Sciences (OLS) project. She is currently based in Johannesburg where she conducts both academic research and research/consulting in the private sector. When not writing/researching, she is most likely fly fishing or talking about fly fishing.</p>"
   website: https://twitter.com/biandri
   
