--- a/_data/2022/helsinki/hero.yml
+++ b/_data/2022/helsinki/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 19 to 29, 2022 | University of Helsinki"
+header_2: "June 20 to July 1, 2022 | University of Helsinki"
 location: "SICSS-Helsinki"
