--- a/_data/2022/odissei/participants.yml
+++ b/_data/2022/odissei/participants.yml
@@ -23,7 +23,7 @@
   
 - name: "Reshmi Gopalakrishna Pillai"
   image: /assets/images/17m_XdJMPc0C55JUlh-0glw4TyKnheImD.jpeg
-  bio: "Gopalakrishna Pillai","bio":"Reshmi is a Lecturer at the Informatics Institute, University of Amsterdam. She holds a PhD from the University of Wolverhampton for her thesis on the expressions of psychological stress in tweets. Her research interests are in analyzing language using natural language processing methods for a better understanding of behaviors and states of individuals and the society."
+  bio: "Reshmi is a Lecturer at the Informatics Institute, University of Amsterdam. She holds a PhD from the University of Wolverhampton for her thesis on the expressions of psychological stress in tweets. Her research interests are in analyzing language using natural language processing methods for a better understanding of behaviors and states of individuals and the society."
   website: https://www.linkedin.com/in/reshmi-g-pillai/
   
 - name: "Gita Huijgen"
